# stockfish-chess

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/engine/: actor.rs  difficulty.rs  mod.rs
src/game/: mod.rs  state.rs
src/study/: mod.rs
src/ui/: analysis.rs  board.rs  controls.rs  mod.rs  move_list.rs  pieces.rs  study_panel.rs  theme.rs
